--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rubby-valentin-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wggriffin.github.io/Rubby-site/",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.0"
   },
   "dependencies": {
@@ -14,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
